# regular

./: .ghci  .gitignore  LICENSE  README.md  hie.yaml  regular.cabal  stack.yaml
app/: Main.hs
src/: Common.hs  Config.hs  DA.hs  DFA.hs  EFA.hs  ERE.hs  Examples.hs  FA.hs  Finite.hs  GFA.hs  GNFA.hs  Impossible.hs  IntBase.hs  Language.hs  NA.hs  NEF.hs  NFA.hs  NatBase.hs  NatPBase.hs  NotEmpty.hs  PA.hs  RE.hs  RegExp.hs  Rose.hs  TG.hs  TransitionGraph.hs
test/: Spec.hs
