name:                regular
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/subttle/regular
license:             BSD3
license-file:        LICENSE
author:              Ian Treyball
maintainer:          ian.treyball@columbia.edu
copyright:           2016-2021 Ian Treyball
category:            automata
build-type:          Simple
cabal-version:       >=1.20

library
  hs-source-dirs:      src
  exposed-modules:     DFA
                     , NFA
                     , EFA
                     , GNFA
                     , RegExp
                     , ERE
                     , FA
                     , DA
                     , NA
                     , PA
                     , Language
                     , Common
                     , TransitionGraph
                     , Finite
                     , Examples
                     , Config
                     , IntBase
                     , NatBase
                     , Impossible
  build-depends:       base >= 4.8 && < 5
                     , base-unicode-symbols
                     , containers >= 0.5.11.0
                     , containers-unicode-symbols
                     , contravariant
                     , recursion-schemes
                     , algebra
                     , algebraic-graphs
                     , profunctors
                     , pointed
                     , fin
                     , these
                     , selective
                     , universe
                     , universe-base
                     , universe-instances-extended
                     , tagged
                     , ordered-containers
                     , groups
                     , semigroupoids
                     , comonad
                     , distributive
                     , adjunctions
                     , smash
                     , data-fix
  default-language:    Haskell2010
  default-extensions: UnicodeSyntax
                      ScopedTypeVariables
                      InstanceSigs
                      GADTs
                      TypeApplications

executable regular-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , base-unicode-symbols
                     , containers >= 0.5.11.0
                     , containers-unicode-symbols
                     , contravariant
                     , regular
                     , profunctors
                     , pointed
                     , fin
                     , algebraic-graphs
  default-extensions: UnicodeSyntax
                      ScopedTypeVariables
                      InstanceSigs
                      GADTs
                      TypeApplications

test-suite regular-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5.11.0
                     , regular
                     , easytest >= 0.1
                     , base-unicode-symbols
                     , groups
                     , fin
  ghc-options:         -threaded
  default-language:    Haskell2010
  default-extensions: UnicodeSyntax
                      ScopedTypeVariables
                      InstanceSigs
                      GADTs
                      TypeApplications

source-repository head
  type:     git
  location: https://github.com/subttle/regular
